# Astar-COPDNet

./: .gitignore  FIX_STEP3_LIST_STATS_ERROR.txt  README.md  pyproject.toml  requirements.txt  run_astar_project.bat  run_astar_project.sh  run_pipeline_step_by_step.bat  run_pipeline_step_by_step.py  run_ultra_pipeline.py
configs/: astar_real_paths.json  default.json  windows_real_paths.json
scripts/: ablation_study.py  advanced_research_pipeline.py  blind_experiments.py  build_metadata.py  check_real_paths.py  clear_bad_feature_cache.py  create_architecture_figure.py  create_literature_audit.py  deep_baseline_benchmark.py  feature_benchmark.py  feature_combo_benchmark.py  figure_superpack.py  full_ultra_pipeline.py  generate_extra_publication_figures.py  generate_extra_publication_figures_fixed.py  generate_figures.py  generate_interpretability_figures.py  independent_analysis.py  make_publication_figures_astar.py  optimizer_benchmark.py  run_astar_project.py  run_full_project.py  signal_analysis_report.py  stats_tests.py  subgroup_analysis.py  train_standard.py  validation_strategy_benchmark.py
src/dg_copdnet/: config.py
src/dg_copdnet/analysis/: figure_factory.py  interpretability.py  literature_audit.py  signal_analysis.py
src/dg_copdnet/data/: augmentations.py  dataset.py  features.py  metadata_builder.py  robust_splits.py  splits.py
src/dg_copdnet/models/: baselines.py  blocks.py  dare_copdnet.py  hybrid_model.py  losses.py
src/dg_copdnet/training/: advanced_trainer.py  astar_trainer.py  classical_models.py  domain_losses.py  engine.py  trainer.py
(+6 files in other folders)
