[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dg-copdnet-standard"
version = "0.1.0"
description = "Standardized respiratory-sound COPD research pipeline with CUDA support"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
